# KindlePlayer

./: .gitmodules  CMakeLists.txt  README.md
src/: framework.cpp  framework.h  main.cpp  playlist.cpp  playlist.h  song.cpp  song.h  ui.cpp  ui.h
